# biz-rw

./: .gitignore  Dockerfile.backend  README.md  docker-compose.yml  run.py  vercel.json
backend/: .env.example  auth.py  config.py  database.py  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/routers/: admin.py  analytics.py  auth.py  bookings.py  businesses.py  feedback.py  products.py
backend/utils/: email.py  file_upload.py
frontend/: .env.example  .env.production  Dockerfile.frontend  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue
frontend/src/api/: axios.js  index.js
frontend/src/assets/: main.css
frontend/src/components/: AppFooter.vue  AppNav.vue  BusinessCard.vue  StarRating.vue  ToastContainer.vue
frontend/src/composables/: useConfirm.js  useTitle.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js  toast.js
frontend/src/views/: AnalyticsView.vue  BookingsView.vue  BusinessEditView.vue  BusinessPublicView.vue  BusinessSetupView.vue  DashboardView.vue  ExploreView.vue  HomeView.vue  LoginView.vue  NotFoundView.vue  RegisterView.vue
frontend/src/views/admin/: AdminBusinesses.vue  AdminDashboard.vue  AdminFeedback.vue  AdminLayout.vue  AdminUsers.vue
